--- a/web/templates/settings/profile_settings.hbs
+++ b/web/templates/settings/profile_settings.hbs
@@ -34,6 +34,17 @@
                 </form>
 
                 <form class="custom-profile-fields-form grid"></form>
+                
+                <form class="timezone-setting-form">
+                    <div class="button-group grid">
+                        <button class="button small rounded">
+                            <i class="fa fa-plus" aria-hidden="true"></i> 继续添加资料
+                        </button>
+                        <button class="button small rounded">
+                            添加认证资料 <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
 
