--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block customhead %}
-<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="mobile-web-app-capable" content="yes">
 <link href="{{ static('images/logo/apple-touch-icon-precomposed.png') }}" rel="apple-touch-icon-precomposed" />
 <style>
     #app-loading {
@@ -133,6 +133,8 @@
 
 <div id="tooltip-templates-container"></div>
 <div id="streams_overlay_container"></div>
+<div id="work_streams_overlay_container"></div>
+<div id="work_sku_overlay_container"></div>
 <div id="groups_overlay_container"></div>
 <div id="drafts_table"></div>
 <div id="scheduled_messages_overlay_container"></div>
@@ -149,6 +151,7 @@
 </div>
 
 <div id="user-profile-modal-holder"></div>
+<div id="user-work-order-modal-holder"></div>
 
 <audio id="user-notification-sound-audio">
     <source class="notification-sound-source-ogg" type="audio/ogg" />
