--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -697,6 +697,8 @@ input.recipient_box {
         text-decoration: none;
         font-size: 17px;
         text-align: center;
+        display: flex;
+        align-items: center;
 
         &:hover {
             opacity: 1;
