--- a/web/styles/image_upload_widget.css
+++ b/web/styles/image_upload_widget.css
@@ -7,9 +7,29 @@
 
     transition: all 0.3s ease;
 
+    .image-box,
     .image-block {
         background-size: contain;
+        position: relative;
         height: 100%;
+
+        .add-icon {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            width: 50px !important;
+            height: 50px !important;
+        }
+    }
+
+    .image-box {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-color: #fff;
     }
 
     .image-hover-background {
