--- a/web/templates/gear_menu.hbs
+++ b/web/templates/gear_menu.hbs
@@ -11,19 +11,19 @@
                 <a href="/upgrade/" target="_blank" rel="noopener noreferrer" role="menuitem">{{t "Upgrade to {standard_plan_name}" }}</a>
             </li>
             {{/if}}
-            <li class="divider" role="presentation"></li>
+            <li class="divider" role="presentation"></li> 
             <li class="hidden-for-spectators" role="presentation">
-                <a href="#streams/subscribed" role="menuitem">
+                <a href="#user-work" role="menuitem" class="menuitem-version">
                     <i class="fa fa-calendar-minus-o" aria-hidden="true"></i> 全部工单
                 </a>
             </li>
             <li class="hidden-for-spectators" role="presentation">
-                <a href="#streams/subscribed" role="menuitem">
+                <a href="#work-streams" role="menuitem">
                     <i class="fa fa-list-ol" aria-hidden="true"></i> 我的工作流
                 </a>
             </li>
             <li class="hidden-for-spectators" role="presentation">
-                <a href="#streams/subscribed" role="menuitem">
+                <a href="#my-sku" role="menuitem">
                     <i class="fa fa-cube" aria-hidden="true"></i> 我的商品服务
                 </a>
             </li>
