feat(user-profile): 添加新资料功能并优化用户profile展示
- 新增添加资料功能，用户可以在profile设置中添加自定义资料
- 优化用户profile展示，增加权重、特征等信息
- 修复部分模板渲染问题，更新样式以适应新功能

--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -1090,6 +1090,7 @@ ul {
     }
 
     .info-url-list {
+        margin-top: 10px;
         margin-bottom: 20px;
 
         .url-item {
@@ -2313,8 +2314,17 @@ ul {
             align-items: center;
         }
 
-        .help-submit-form {
+        .help-submit-form,
+        .reply-excep-form {
             display: none;
+        }
+    }
+
+    .reply-excep-form-content {
+        padding-top: 20px;
+
+        .inline-block {
+            font-weight: 600;
         }
     }
 }
