--- a/web/templates/settings/profile_settings.hbs
+++ b/web/templates/settings/profile_settings.hbs
@@ -34,10 +34,40 @@
                 </form>
 
                 <form class="custom-profile-fields-form grid"></form>
-                
+
+                <form class="new-profile-list-content">
+                </form>
+                <form class="new-profile-form-content">
+                    <div class="new-profile-list">
+                        <div class="new-profile-item">
+                            <div class="custom_user_field">
+                                <label class="inline-block" for="x" class="title">新资料名称</label>
+                                <div class="alert-notification custom-field-status"></div>
+                                <div class="field_hint"></div>
+                                <div class="field">
+                                    <input class="custom_user_field_value modal_text_input settings_text_input_new new_profile_info_name" type="text" placeholder="请输入" />
+                                </div>
+                            </div>
+                            <div class="custom_user_field">
+                                <label class="inline-block" for="x" class="title">链接地址</label>
+                                <div class="alert-notification custom-field-status"></div>
+                                <div class="field_hint"></div>
+                                <div class="field">
+                                    <input class="custom_user_field_value modal_text_input settings_text_input_new new_profile_info_url" type="text" placeholder="请输入" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="account-settings-status"></div>
+                    <div class="custom_user_field">
+                        <div class="field">
+                            <button class="button small rounded" id="submit-new-profile-btn">提交</button>
+                        </div>
+                    </div>
+                </form>
                 <form class="timezone-setting-form">
                     <div class="button-group grid">
-                        <button class="button small rounded">
+                        <button class="button small rounded add-new-rpa-profile-btn">
                             <i class="fa fa-plus" aria-hidden="true"></i> 继续添加资料
                         </button>
                         <button class="button small rounded">
