--- a/web/templates/stream_settings/work_streams_list.hbs
+++ b/web/templates/stream_settings/work_streams_list.hbs
@@ -6,7 +6,7 @@
     {{#each streamList}}
         <div class="work-stream-item">
             <div class="stream-id">
-                {{pid}}
+                #SOP{{pid}}
             </div>
             <div class="stream-title">
                 {{title}}
